feat: Big bump, many features added
Upload File
Share File
Download File
Recent Files
Provided Nice Popups on Upcoming features
Utilized tauri-context-menu plugin for right click menu
List files in One place

--- a/src-tauri/app/package.json
+++ b/src-tauri/app/package.json
@@ -16,6 +16,7 @@
     "@tauri-apps/api": "^1.6.0",
     "clipboard": "^2.0.11",
     "nuxt": "^3.12.4",
+    "tauri-plugin-context-menu": "^0.8.0",
     "vue": "latest"
   },
   "devDependencies": {
