--- a/src-tauri/app/package.json
+++ b/src-tauri/app/package.json
@@ -14,6 +14,7 @@
     "@heroicons/vue": "^2.1.5",
     "@nuxtjs/supabase": "^1.4.0",
     "@nuxtjs/tailwindcss": "^6.12.1",
+    "@sentry/nuxt": "^8.31.0",
     "@tauri-apps/api": "^1.6.0",
     "clipboard": "^2.0.11",
     "nuxt": "^3.12.4",
