--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -67,6 +67,6 @@ jobs:
       - name: Download a Build Artifact
         uses: actions/download-artifact@v4.1.8
         with:
-          name: ${{uname}}
+          name: ${{ matrix.platform }}
           path: ./src-tauri/target/release/bundle
 
