--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "app"
-version = "0.1.1"
-description = "A Tauri App"
+version = "0.2.8"
+description = "Store, Manage and Organize your Files on the Cloud"
 authors = ["you"]
 license = ""
 repository = ""
