--- a/src-tauri/app/.env.example
+++ b/src-tauri/app/.env.example
@@ -1,3 +1,3 @@
 SUPABASE_URL="<Your Supabase URL>"
 SUPABASE_KEY="<Your Supabase Key>"
-***REMOVED***// Change if on Windows
+BUILDFOR="Linux"// Change if on Windows
